--- a/lib/adyen-skinbuilder/server/views/index.html.erb
+++ b/lib/adyen-skinbuilder/server/views/index.html.erb
@@ -3,58 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Adyen Skinbuilder</title>
-    <style>
-      body {
-        margin: 20px;
-        padding: 0px;
-        border: 0px;
-        background-color: #CECECE;
-        font-size: 0.8em;
-        font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
-      }
-
-      h1 {
-        color: #F0AB00;
-        font-size: 1.8em;
-        font-family: "Trebuchet MS", Arial, sans-serif;
-      }
-
-      .content {
-        min-height: 480px;
-        background: #FFFFFF;
-      }
-
-      .top {
-        height: 15px; /* 95px */
-        background: #3C8A2E;
-      }
-
-      .skins {
-        padding-left: 150px;
-      }
-
-      .warning {
-        color: red;
-        margin: 20px;
-      }
-
-      table {
-        margin-top: 10px;
-        margin-bottom: 20px;
-      }
-
-      tr th {
-        background-color: #CCC;
-      }
-
-      td {
-        padding: 1px 3px;
-      }
-
-      tbody tr:nth-child(2n) {
-         background-color: #EAEAEA;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/hpp/css/index.css">
   </head>
   <body>
     <div class="content">
