server js from the local server…

--- a/lib/adyen-skinbuilder/server/views/_adyen_payment_fields.html.erb
+++ b/lib/adyen-skinbuilder/server/views/_adyen_payment_fields.html.erb
@@ -78,9 +78,9 @@
 
     //]]>
 </script>
-<script type="text/javascript" src="https://test.adyen.com/hpp/js/animatedcollapse.js"></script>
-<script type="text/javascript" src="https://test.adyen.com/hpp/js/cc.js"></script>
 <input type="hidden" id="brandCode" name="brandCode" value="" />
+<script type="text/javascript" src="/hpp/js/animatedcollapse.js"></script>
+<script type="text/javascript" src="/hpp/js/cc.js"></script>
 
 <h2 id="stageheader">Please Enter your Payment Details</h2>
 
