--- a/lib/adyen-skinbuilder/server/views/_adyen_payment_fields.html.erb
+++ b/lib/adyen-skinbuilder/server/views/_adyen_payment_fields.html.erb
@@ -175,10 +175,10 @@
 <input type="hidden" name="currencyCode" value="EUR" />
 <input type="hidden" name="displayGroup" value="" />
 <input type="hidden" name="merchantAccount" value="Wunderlistshop" />
-<input type="hidden" name="merchantReference" value="subscription_1_web_production_20130320:4.49EUR" />
-<input type="hidden" name="merchantReturnData" value="{&quot;env&quot;:&quot;development&quot;,&quot;source&quot;:&quot;web&quot;,&quot;user_id&quot;:&quot;AA77AAAAAGA&quot;}" />
+<input type="hidden" name="merchantReference" value="8:33a3d006-9cb3-49d1-888a-dd0b95832ba0:AA0JAAAAAAI">
+<input type="hidden" name="merchantReturnData" value="{&quot;env&quot;:&quot;development&quot;,&quot;source&quot;:&quot;web&quot;,&quot;user_id&quot;:&quot;AA0JAAAAAAI&quot;,&quot;ip&quot;:&quot;127.0.0.1&quot;}">
 <input type="hidden" name="originalSession" value="" />
-<input type="hidden" name="paymentAmount" value="499" />
+<input type="hidden" name="paymentAmount" value="799" />
 <input type="hidden" name="recurringContract" value="RECURRING" />
 <input type="hidden" name="referrerURL" value="" />
 <input type="hidden" name="sessionId" value="" />
